--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,4 +9,14 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <error-page>
+		<error-code>404</error-code>
+		<location>/error/error_404.jsp</location>
+	</error-page>
+	<!-- 에러페이지는 에러 유형에 따라 여러개 설정할 수 있음 -->
+	<error-page>
+		<exception-type>java.lang.NumberFormatException</exception-type>
+		<location>/error/error_number.jsp</location>
+	</error-page>
 </web-app>
